package rpc

import (
	"context"
	// "fmt"

	// . "github.com/go-jet/jet/v2/postgres"
	// "github.com/google/uuid"
	// codes "google.golang.org/grpc/codes"
	// status "google.golang.org/grpc/status"

	// "washambi-lib/db"
	// nm "washambi-lib/db/nuland/model"
	// nt "washambi-lib/db/nuland/table"
	aufheben_pb "washambi-lib/rpc/aufheben/v1"
	// "washambi-lib/rpc/from"
)

func (s *ServerImpl) BookmarkCreate(ctx context.Context, call *aufheben_pb.BookmarkCreateRequest) (*aufheben_pb.BookmarkCreateResponse, error) {
	return nil, nil
}
